syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.itarhitekture";
option java_outer_classname = "ReservationGrpcProto";

service ReservationGrpc {
  rpc getReservations (EmptyRequest) returns (ReservationList) {}
  rpc getReservationByRestaurantId (RestaurantIdRequest) returns (ReservationList) {}
  rpc getReservationByCustomerId (CustomerIdRequest) returns (ReservationList) {}
  rpc createReservation (CreateReservationRequest) returns (Reservation) {}
  rpc updateReservation (UpdateReservationRequest) returns (Reservation) {}
  rpc deleteReservation (DeleteReservationRequest) returns (EmptyResponse) {}
}

message EmptyRequest {}

message EmptyResponse {}

message RestaurantIdRequest {
  string restaurantId = 1;
}

message CustomerIdRequest {
  string customerId = 1;
}

message CreateReservationRequest {
  string restaurantId = 1;
  string customerId = 2;
  string date = 3;
}

message UpdateReservationRequest {
  string reservationId = 1;
  string restaurantId = 2;
  string customerId = 3;
  string date = 4;
}

message DeleteReservationRequest {
  string reservationId = 1;
}

message Reservation {
  string reservationId = 1;
  string restaurantId = 2;
  string customerId = 3;
  string date = 4;
}

message ReservationList {
  repeated Reservation reservations = 1;
}